Fix end of page hidden overflow

--- a/content/loc_style_guides/Localization Style Guide - EN/LSG_EN_style.css
+++ b/content/loc_style_guides/Localization Style Guide - EN/LSG_EN_style.css
@@ -38,12 +38,11 @@ body {
     padding: 0 1rem;
     grid-area: 1 / 1 / span 5 / span 1;
     margin: 60px 15% 0 0;
-    /* padding: 0 30px; */
     overflow-y: scroll;
     position: fixed;
     left: 0;
     top: 0;
-    height:100vh;
+    height: calc(100% - 60px);
 }
 
 .update-info {
@@ -117,12 +116,6 @@ table {
     font-size: 0.85rem;
 }
 
-/* aside {
-    position: sticky;
-    right: 0;
-    top: 0;
-} */
-
 .aside-content {
     grid-area: 1 / 2 / span 1 / span 1;
     padding: 0.5rem 1rem;
@@ -130,8 +123,7 @@ table {
     color: var(--bg-5);
     line-height: 1.7;
     position: fixed;
-    /* width: 15%; */
-    height:100vh;
+    height: calc(100% - 60px);
     left: 85%;
     right: 0;
     overflow-y: scroll;
